<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/renameBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="118dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:text="@string/rename"
        android:textAllCaps="false"
        android:layout_weight="0.9"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:icon="@drawable/rename_icon"
        app:iconGravity="top"
        app:iconTint="?attr/themeColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:background="?attr/selectableItemBackground"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:icon="@drawable/delete_icon"
        app:iconGravity="top"
        app:iconTint="?attr/themeColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:icon="@drawable/share_icon"
            android:text="@string/share"
            app:iconGravity="top"
            android:textSize="11sp"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:layout_weight="0.9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black"
            app:iconTint="?attr/themeColor"/>



          <com.google.android.material.button.MaterialButton
              android:id="@+id/infoBtn"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            app:icon="@drawable/about_icon"
            android:text="@string/info"
            app:iconGravity="top"
            android:textSize="11sp"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:layout_weight="0.8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black"
            app:iconTint="?attr/themeColor"/>


    </LinearLayout>

